Fixes a wrong margin on the speaker description.

--- a/source/stylesheets/base/typography.scss
+++ b/source/stylesheets/base/typography.scss
@@ -148,8 +148,8 @@ li { font-size: .9rem; }
       margin-bottom: 60px;
     }
     &.is-marginless {
-      margin-bottom: 40px;
       margin-top: 100px;
+      margin-bottom: 40px;
     }
 
     &.at-schedule { margin-top: 40px; }
@@ -255,7 +255,6 @@ li { font-size: .9rem; }
     line-height: 1.4rem;
     text-align: left;
     @media (max-width: 800px) {
-      margin-top: 20px;
       text-align: center;
     }
   }
